--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 			| <a href="#" title="Logout">退出</a>
 		</div>
 		<div id="sitename">
-			<a href="index.html" class="logo float-left" title="后台管理系统"></a>
+			<div class="logo">
+               <a href="index.html" class="float-left" title="后台管理系统">
+               	jsadmin
+               </a>
+			</div>
 			<div class="button float-right">
 				<a href="#" id="dialog_link" class="btn ui-state-default ui-corner-all"><span class="ui-icon ui-icon-newwin"></span>打开对话框</a>
 				<a href="#" id="login_dialog" class="btn ui-state-default ui-corner-all"><span class="ui-icon ui-icon-image"></span>登录框</a>
